# coralmicro

./: build.sh
.venv312/: pyvenv.cfg
examples/: CMakeLists.txt
examples/pose_int8/: CMakeLists.txt  pose_int8.cc  pose_uart_to_video.py
examples/pose_streaming_http/: CMakeLists.txt  pose_stream_capture.py  pose_stream_viewer.py  pose_streaming_http.cc
